# rustdown-formatter

./: .gitignore  Cargo.toml  build.sh  callgrind.out.526134  config.json
extension/: LICENSE.txt  README.md  package-lock.json  package.json  rustdown-formatter-0.1.0.vsix  tsconfig.json
extension/scripts/: install.js
extension/src/: extension.ts
src/: config.rs  formatter.rs  lib.rs  main.rs  parser.rs  pipeline.rs
